Fixed: Styles: z-index of active/selected tabs

--- a/src/styles/themes/compact/sidebar/tab.styl
+++ b/src/styles/themes/compact/sidebar/tab.styl
@@ -79,7 +79,7 @@
   &[data-selected="true"]
   &[data-selected="true"]:hover
   &[data-selected="true"]:active
-    z-index: 10
+    z-index: 15
   
   &[data-discarded="true"] > .body > .fav
     opacity: .32
